# 148-fall-2025-final-project-fall-2025-final-project-team-1

./: .gitignore  README.md
Arduino Code/BACK_MEGA/: BACK_MEGA.ino
Arduino Code/Encoder_RPM_I2C_With_Library/: Encoder_RPM_I2C_With_Library.ino
Arduino Code/FRONT_MEGA/: FRONT_MEGA.ino
Arduino Code/Position_Control_Test/: Position_Control_Test.ino
CAD/: Arduino front mount.f3d  Arduino front mount.step  Electronics mount back.f3d  Electronics mount back.step  Encoder Mount.f3d  Encoder Mount.step  H bridge Mount Front.f3d  H bridge Mount Front.step  Steering absolute encoder.f3d  Steering absolute encoder.step  Steering spacer.f3d  Steering spacer.step
Wiring/: Robojeep_wiring_diagram.sdr
robojeep_ws/: launch_robojeep.sh
robojeep_ws/config/: robojeep_teleop.yaml
robojeep_ws/front_mega/: front_mega.ino
robojeep_ws/src/robojeep_arduino_bridge/: package.xml  setup.cfg  setup.py
robojeep_ws/src/robojeep_arduino_bridge/launch/: arduino_bridge.launch.py  drive_forward.py  drive_radio.launch.py
robojeep_ws/src/robojeep_arduino_bridge/robojeep_arduino_bridge/: .bridge_node.py.swp  .serial_manager.py.swp  bridge_node.py  bridge_node_calibrated.py
robojeep_ws/src/robojeep_base/: package.xml  setup.cfg  setup.py
robojeep_ws/src/robojeep_base/robojeep_base/: .base_node.py.swp  base_node.py  base_node_differential.py
robojeep_ws/src/robojeep_bringup/: package.xml  setup.cfg  setup.py
robojeep_ws/src/robojeep_msgs/: CMakeLists.txt  package.xml
robojeep_ws/src/robojeep_msgs/msg/: SteeringCommand.msg  WheelCommand.msg  WheelFeedback.msg
(+2 files in other folders)
