<?xml version="1.0"?>
<package format="3">
  <name>robojeep_msgs</name>
  <version>0.0.1</version>
  <description>Custom message definitions for the RoboJeep platform.</description>

  <maintainer email="jetson@ucsdrobojeep.local">RoboJeep Team</maintainer>
  <license>BSD-3-Clause</license>

  <!-- Build system -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Interface generation -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <depend>std_msgs</depend>

  <!-- Mark this as an interface package so ROS CLI tools can find it -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

